--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,6 +18,15 @@ body{
     background-color: var(--secondary-color);
     color: var(--main-color);
 }
+*::-webkit-scrollbar{
+    width: 10px;
+    background-color: var(--secondary-color);
+}
+*::-webkit-scrollbar-thumb{
+    background-color: var(--third-color);
+    border-radius: 10px;
+    
+}
 /*generalidades*/
 h1{
     font-size: 4rem;
@@ -176,12 +185,9 @@ estilos seccion principal
         margin-bottom:20px;
     }
     .galeriaAclamadas{
-        overflow-x: scroll;
-        overflow-y: hidden;
-        width: 100%;
+        height: 380px;
+        overflow: auto;
         display: flex;
-        justify-content: flex-start;
-        align-items: start;
         column-gap: 30px;
         div{
             width: 220px;
@@ -198,6 +204,8 @@ estilos seccion principal
         }
     }
 }
+
+
 
 /*
 @media screen and (max-width: 800px) {
