--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,8 +9,8 @@
 :root{
     --main-color: #f3f3f3;
     --secondary-color: #161516;
-    --third-color: #850f0f;
-    --third-color-t: #840404bc;
+    --third-color: #2f2dd1;
+    --third-color-t: #4565f7d2;
     --font-weight-bold: 700;
 }
 /*estilos del body*/
@@ -186,7 +186,7 @@ estilos seccion principal
         div{
             width: 250px;
             height: 350px;
-            box-shadow: 10px 10px 47px -6px rgba(255,255,255,0.42);
+            box-shadow: 10px 10px 47px -6px rgba(165, 37, 37, 0.42);
             border-radius: 5px;
             img{
                 width: 100%;
@@ -231,7 +231,7 @@ estilos seccion principal
     }
 }
 footer{
-    background-color:#9f3647;
+    background-color:#3734f3d7;
     color:#ffffff;
     height: 15vh;
     display: flex;
@@ -256,5 +256,15 @@ footer{
                 border-radius: 5px;
             }
         }
+    }
+    ul{
+        list-style: none;
+        display: flex;
+        column-gap: 20px;
+
+    }
+    a {
+        text-decoration: none;
+        color: #ffffff;
     }
 }
