--- a/css/estilos.css
+++ b/css/estilos.css
@@ -60,7 +60,9 @@ header,footer{
     height: 4em;
     position:sticky;
     top:0; 
-    z-index: 10; 
+    z-index: 10;
+    background: rgb(5,0,87);
+    background: linear-gradient(90deg, rgba(5,0,87,1) 0%, rgba(8,8,126,1) 35%, rgba(38,152,175,1) 100%);
     nav{
         height: 100%;
         display:flex;
@@ -264,19 +266,21 @@ a {
     height: 100vh;
     display: flex;
 }
-.seccionRegistrarse{
+.seccionRegistrarse
+{
     background-color:rgb(42, 42, 42);
-    width: 30%;
-    border-radius: 5px;
-    padding: 40px 20px;
+    width: 40%;
+    border-radius: 10px;
+    padding: 20px 20px;
     margin: auto;
     display: flex;
     flex-direction:column;
     justify-content: center;
     align-items: center;
     font-size:1.2rem;
-    .tituloRegistrarse{
-        font-size: 2.5rem;
+    .tituloRegistrarse
+    {
+        font-size: 1.7rem;
         font-weight: 700;
         margin-bottom: 20px;
     }
