--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@
 }
 /*configuracion de variables*/
 :root{
-    --main-color: #f3f3f3;
+    --main-color: #F4EEEE;
     --secondary-color: #161516;
     --third-color: #2f2dd1;
     --third-color-t: #4565f7d2;
@@ -278,8 +278,7 @@ a {
 }
 .seccionRegistrarse
 {
-    background-color:hsl(0, 4%, 26%);
-    opacity: 0.9;
+    background-color: var(--main-color);
     width: 30%;
     border-radius: 10px;
     padding: 20px 20px;
@@ -289,6 +288,7 @@ a {
     justify-content: center;
     align-items: center;
     font-size:1.2rem;
+    color: #161516;
     box-shadow: 10px 10px 26px 4px rgba(0,0,0,0.4);;
     
     h2{
@@ -300,57 +300,45 @@ a {
         text-align: center;
         margin-bottom: 20px;
         font-size: 1rem;
-        color: antiquewhite;
+        color: #161516;
     }
     a:hover{
         color: #2f2dd1;
+        font-weight: bold;
     }
-    /*seleccionar todos los input menos el checkbox*/
+    
     form{
         width: 100%;
         padding:40px;
-        input:not(.check,.boton),select{
+        div{
+            margin-bottom: 20px;
+        }
+        input{
             width: 100%;
-            margin-bottom: 10px;
             height: 40px;
             padding: 0px 20px;
             font-size: 1.2rem;
             border-radius: 20px;
             border: 2px solid var(--third-color);
-            background-color: #333333;
-            outline: none;
-            color:rgb(255, 255, 255);
-        }
-        
-        .error input:not(.check,.boton),.error select{
-            border: 1px solid #ff0000;
+            background-color:var(--main-color);
+            color:#161516;
         }
         .error-text{
-            color: #ff0000;
             font-size: 0.8rem;
             margin-top:0px;
-            margin-bottom: 10px;
-        }
-      
-        .terminos{
-            font-size: 0.8rem;
-            display: flex;
-            align-items: center;
             margin-bottom: 20px;
-            .textoCheck{
-                margin-left: 10px;
-            }
+            font-weight: 900; 
+        }
+        .input-error{
+            border: 3px solid red;
         }
         button{
            width: 100%;
            margin-bottom: 10px;
         }
+
+        
     }
    
-}
-select{
-    option:first {
-        color: #500a0a;
-    }
 }
 
